--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -13,9 +13,7 @@
             android:id="@+id/splash"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="PAPAR PORT"
-            android:textSize="40dp"
-            android:background="#48F321"
+            android:background="@drawable/logo"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
