--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -21,6 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
+            android:layout_centerVertical="true"
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="15dp"
             android:background="@drawable/mess" />
@@ -30,7 +31,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_marginStart="160dp"
-
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
             android:layout_marginBottom="4dp"
             android:padding="10dp"
             android:text="Home"
@@ -42,6 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
+            android:layout_centerVertical="true"
             android:layout_marginBottom="14dp"
             android:background="@drawable/baseline_menu_24" />
 
