--- a/app/src/main/res/layout/activity_presentation.xml
+++ b/app/src/main/res/layout/activity_presentation.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
 
-    tools:context=".presentation.Presentation">
+    tools:context=".ui.createpresentation.Presentation">
 
 
     <RelativeLayout
