--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,8 +7,18 @@
         android:layout_width="match_parent"
         android:background="@color/blue"
         android:layout_height="match_parent"
-        tools:context=".signin.Login">
+        tools:context=".ui.signin.Login">
 
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Loading..."
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/tvSignUp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
@@ -55,7 +65,10 @@
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
                 android:layout_width="match_parent"
+                android:id="@+id/email_container"
                 android:layout_marginHorizontal="10dp"
+                app:helperText="@string/invalid"
+                app:helperTextTextColor="#E91E63"
                 android:layout_height="wrap_content">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -64,11 +77,12 @@
                     android:layout_height="match_parent"
                     android:drawableStart="@drawable/baseline_phone_android_24"
                     android:ems="10"
+                    android:lines="1"
                     android:layout_marginStart="10dp"
                     android:layout_marginEnd="10dp"
                     android:hint="Email/mobile number"
                     android:background="@drawable/roundcorner"
-                    android:inputType="text"
+                    android:inputType="textEmailAddress"
                     android:padding="12dp"
                     android:textColor="@color/black"
                     android:textSize="16sp"
@@ -94,20 +108,22 @@
                 android:layout_marginHorizontal="10dp"
                 android:singleLine="true"
                 android:hint="Password"
-                app:passwordToggleEnabled="true"
 
-                app:passwordToggleTint="@color/white">
+                app:helperText="@string/invalid"
+                app:helperTextTextColor="#E91E63"
+                app:passwordToggleEnabled="true"
+                >
 
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/getPassword"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
                     android:background="@drawable/roundcorner"
                     android:drawableStart="@drawable/baseline_lock_24"
                     android:ems="15"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginEnd="10dp"
                     android:inputType="textPassword"
                     android:maxLength="20"
                     android:maxLines="1"
@@ -115,8 +131,8 @@
                     android:singleLine="true"
                     android:textColor="@color/black"
                     android:textSize="18sp" />
-
             </com.google.android.material.textfield.TextInputLayout>
+
 
             <Button
                 android:id="@+id/signInBtn"
@@ -125,6 +141,7 @@
                 android:layout_margin="20dp"
                 android:padding="10dp"
                 android:text="LOGIN"
+                android:background="@color/black"
                 android:textColor="@color/white"
                 android:textSize="20sp" />
 
@@ -139,6 +156,7 @@
                 android:textSize="18sp" />
 
         </LinearLayout>
+
 
         <TextView
             android:id="@+id/textView4"
