--- a/app/src/main/res/layout/activity_scan_document.xml
+++ b/app/src/main/res/layout/activity_scan_document.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context=".scandocument.ScanDocument">
+    tools:context=".ui.scandocument.ScanDocument">
 
     <RelativeLayout
         android:id="@+id/relativeLayout4"
