--- a/app/src/main/res/layout/fragment_image.xml
+++ b/app/src/main/res/layout/fragment_image.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#3F51B5"
-    tools:context=".preview.ImageFragment">
+    tools:context=".ui.preview.ImageFragment">
 
     <TextView
         android:layout_width="match_parent"
