--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -9,6 +9,19 @@
         android:background="@color/blue"
         tools:context=".ui.resetpassword.ResetPassword">
 
+
+
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="wrap_content"
@@ -90,7 +103,7 @@
             android:layout_marginTop="20dp"
             android:background="@color/white"
             android:drawableStart="@drawable/baseline_lock_24"
-            android:hint="New Password"
+            android:hint="confirm password"
             android:inputType="textPassword"
             android:maxLines="1"
             android:padding="12dp"
