--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -58,7 +58,7 @@
     </RelativeLayout>
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/scan_image"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginStart="30dp"
@@ -74,7 +74,7 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="15dp"
         android:src="@drawable/impo"
-        app:layout_constraintStart_toEndOf="@+id/imageView4"
+        app:layout_constraintStart_toEndOf="@+id/scan_image"
         app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />
 
     <ImageView
@@ -85,7 +85,7 @@
         android:layout_marginTop="10dp"
         android:src="@drawable/paste"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
+        app:layout_constraintTop_toBottomOf="@+id/scan_image" />
 
     <ImageView
         android:id="@+id/imageView6"
