--- a/app/src/main/res/layout/activity_paste_link.xml
+++ b/app/src/main/res/layout/activity_paste_link.xml
@@ -53,6 +53,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
+        android:hint="  Paste Link"
         android:background="@drawable/roundcorner"
         android:paddingVertical="10dp"
         app:layout_constraintEnd_toEndOf="parent"
