--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -119,7 +119,9 @@
             android:text="Continue"
             android:layout_marginHorizontal="30dp"
             android:layout_marginTop="30dp"
-            android:background="@color/white"
+            android:background="@drawable/custom_button"
+            android:backgroundTint="@color/skyblue"
+            android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/newPassword1" />
