--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -194,8 +194,10 @@
                 android:layout_marginTop="35dp"
                 android:padding="10dp"
                 android:text="Sign Up"
-                android:background="@color/black"
-                android:textColor="@color/white"
+                android:textAllCaps="false"
+                android:background="@drawable/custom_button"
+                android:backgroundTint="@color/skyblue"
+                android:textColor="@color/black"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
