--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -257,13 +257,14 @@
             android:id="@+id/siSignin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="30dp"
             android:layout_marginTop="52dp"
-            android:layout_marginEnd="10dp"
-            android:background="@color/black"
+            android:layout_marginEnd="30dp"
+            android:background="@drawable/custom_button"
             android:padding="10dp"
+            android:backgroundTint="@color/skyblue"
             android:text="LOGIN"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
