--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -58,6 +58,7 @@
             android:layout_marginTop="24dp"
             android:background="@drawable/roundcorner"
             android:padding="10dp"
+            android:paddingVertical="15dp"
             android:hint="Enter your email/Mobile number"
             android:drawableStart="@drawable/baseline_phone_android_24"
             android:layout_marginStart="15dp"
@@ -75,8 +76,11 @@
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
             android:text="Continue"
-            android:textColor="@color/white"
-            android:background="@color/black"
+            android:textStyle="bold"
+            android:textAllCaps="false"
+            android:textColor="@color/black"
+            android:background="@drawable/custom_button"
+            android:backgroundTint="@color/skyblue"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
