--- a/app/src/main/res/layout/activity_presentation.xml
+++ b/app/src/main/res/layout/activity_presentation.xml
@@ -21,6 +21,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
             android:src="@drawable/baseline_arrow_back_24"
 
             />
